--- a/runelite-plugin.properties
+++ b/runelite-plugin.properties
@@ -1,5 +1,5 @@
-displayName=Example
-author=Nobody
-description=An example greeter plugin
+displayName=Optimal Charter
+author=1Defence
+description=optimal route to do ABA port tasks
 tags=
-plugins=com.example.ExamplePlugin
+plugins=com.example.OptimalCharterPlugin
